Implement header CSS & markup. Add header background. Add utils & variables base files. Add shared CSS styles (as .text). Add reset css via bower. Add fonts from google api. Provide common (general) styles in main.scss.

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "itchallenges-fe-html-2017",
   "private": true,
   "dependencies": {
-    "modernizr": "~2.8.1"
+    "modernizr": "~2.8.1",
+    "reset-css": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
