--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "modernizr": "~2.8.1",
-    "reset-css": "^2.2.0"
+    "reset-css": "^2.2.0",
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
