--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "modernizr": "~2.8.1",
     "reset-css": "^2.2.0",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "slick-carousel": "^1.6.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
